# TestRestAPI

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: basic-design.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: collection.rs  history.rs  http.rs  mod.rs
src-tauri/src/types/: collection.rs  history.rs  http.rs  mod.rs
src/components/RequestBuilder/: BodyEditor.tsx  EnvironmentSelector.tsx  HeaderEditor.tsx  RequestPanel.tsx  RequestTabs.tsx  UrlBar.tsx
src/components/ResponseViewer/: ResponseBody.tsx  ResponseHeaders.tsx  ResponseViewer.tsx  StatusBar.tsx
src/components/Sidebar/: CollectionTree.tsx  HistoryList.tsx  Sidebar.tsx
src/components/ui/: CodeEditor.tsx
src/lib/: bindings.ts  collections.ts  tauri.ts
src/stores/: requestStore.ts
